Opened 7 years ago
Closed 5 years ago
#13802 closed bug (fixed)
GLTeapot is black seemingly no matter what I do, and will not close
Reported by: | WildKeccak | Owned by: | pulkomandy |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Drivers/Graphics/intel_extreme/haswell | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Intel Core i5-4210U
Revision hrev51602
Change History (11)
comment:1 by , 7 years ago
Component: | - General → Applications/GLTeapot |
---|---|
Keywords: | GLTeapot removed |
Owner: | changed from | to
comment:2 by , 7 years ago
comment:4 by , 7 years ago
Component: | Applications/GLTeapot → Drivers/Graphics/intel_extreme |
---|
comment:5 by , 7 years ago
I get one frame now, and then it stops, similar to earlier. This is a Toshiba L75-B7240. It is a beast to get graphics working for this machine on a good day. Linux didn't support it for the longest time. Flickering lines and such. Sorry I wasn't more upfront.
comment:6 by , 7 years ago
There were some LLVM upgrades that happened recently to llvm 5.0. The current mesa is compiled with 4.0.
Did you transition to the new package repositories then do a pkgman full-sync ?
https://www.haiku-os.org/guides/daily-tasks/updating-system/
Things are entering a stage of flux at the moment due to the looming beta1.
comment:7 by , 7 years ago
If the wait_for_retrace call doesn't work, this is likely a problem on the driver side and no updates to Mesa would help. We just need to fix the driver to support wait_for_retrace properly.
comment:8 by , 6 years ago
Milestone: | Unscheduled → R1/beta2 |
---|
comment:9 by , 5 years ago
Please try with https://review.haiku-os.org/c/haiku/+/1901 If that still doesn't work, please include a syslog.
comment:10 by , 5 years ago
Component: | Drivers/Graphics/intel_extreme → Drivers/Graphics/intel_extreme/haswell |
---|---|
Owner: | changed from | to
comment:11 by , 5 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
I have a similar videocard, so I could check myself. Fixed in hrev53537.
This happens when the graphics card driver advertises support for waiting for retrace, but doesn't implement it. We will need your video card PCI id (which you can get from the "listdev" command) to check which driver is involved.