intel_extreme: enable global interrupt bit also for Haswell.

Fixes #13802.